--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -40,7 +40,7 @@
     "lucide-react-native": "^0.454.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "0.76.5",
+    "react-native": "^0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
