--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mathematico",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": "index.ts",
   "private": true,
+
   "scripts": {
     "start": "expo start",
     "dev": "expo start --clear",
@@ -15,6 +16,7 @@
     "submit:android": "eas submit --platform android --profile production",
     "submit:ios": "eas submit --platform ios --profile production"
   },
+
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -38,70 +40,43 @@
     "expo-updates": "~29.0.12",
     "fs-extra": "^11.3.2",
     "lucide-react-native": "^0.460.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "^0.81.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "~4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-reanimated": "~3.10.0",
+    "react-native-safe-area-context": "~4.10.1",
+    "react-native-screens": "~3.31.1",
     "react-native-svg": "15.8.0",
-    "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0",
-    "react-refresh": "^0.14.2"
+    "react-native-web": "^0.19.10",
+    "react-native-webview": "^13.6.4"
   },
+
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
-    "@babel/plugin-transform-class-properties": "^7.27.1",
-    "@babel/plugin-transform-private-methods": "^7.27.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/preset-env": "^7.25.0",
-    "@babel/runtime": "^7.28.4",
-    "@react-native-community/cli": "^20.0.2",
-    "@react-native/gradle-plugin": "0.76.5",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@types/babel__generator": "^7.27.0",
-    "@types/babel__template": "^7.4.4",
-    "@types/babel__traverse": "^7.28.0",
-    "@types/graceful-fs": "^4.1.9",
-    "@types/hammerjs": "^2.0.46",
-    "@types/istanbul-lib-coverage": "^2.0.6",
-    "@types/istanbul-lib-report": "^3.0.3",
-    "@types/istanbul-reports": "^3.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/json-schema": "^7.0.15",
-    "@types/react": "~19.1.10",
-    "@types/stack-utils": "^2.0.3",
-    "@types/yargs": "^17.0.33",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "^12.3.0",
+    "@react-native/gradle-plugin": "0.74.5",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/react": "~18.3.3",
     "babel-jest": "^29.7.0",
     "babel-preset-expo": "~54.0.0",
-    "metro-cache": "^0.81.5",
+    "metro-cache": "^0.80.9",
     "react-native-worklets": "^0.5.1",
-    "typescript": "~5.9.2"
+    "typescript": "~5.3.3"
   },
+
   "engines": {
-    "node": ">=20.18.0"
+    "node": ">=18.0.0"
   },
-  "overrides": {
-    "@rollup/rollup-linux-x64-gnu": "npm:rollup",
-    "@rollup/rollup-linux-x64-musl": "npm:rollup",
-    "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup",
-    "@react-native/gradle-plugin": "0.76.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@types/react": "19.1.10"
-  },
-  "resolutions": {
-    "@react-native/gradle-plugin": "0.76.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@types/react": "19.1.10"
-  },
+
   "expo": {
     "install": {
       "exclude": [
