--- a/Frontend-app/tsconfig.json
+++ b/Frontend-app/tsconfig.json
@@ -1,21 +1,14 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "target": "esnext",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
     "strict": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx",
+    "skipDefaultLibCheck": true,
+    "types": [],
     "baseUrl": "./src",
     "paths": {
       "*": [
@@ -24,12 +17,7 @@
         "services/*",
         "config/*"
       ]
-    },
-    "types": [
-      "node",
-      "jest",
-      "@testing-library/jest-dom"
-    ]
+    }
   },
   "include": [
     "**/*.ts",
@@ -40,6 +28,5 @@
   "exclude": [
     "node_modules",
     "**/__tests__/*"
-  ],
-  "extends": "expo/tsconfig.base"
+  ]
 }
