--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -89,6 +89,7 @@
     "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
     "babel-preset-expo": "~54.0.0",
+    "eas-cli": "^16.28.0",
     "metro-cache": "^0.81.5",
     "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
