--- a/Frontend-app/eas.json
+++ b/Frontend-app/eas.json
@@ -6,48 +6,16 @@
   "build": {
     "development": {
       "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
     },
-    "preview": {
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
-      },
-      "env": {
-        "NODE_ENV": "production",
-        "GRADLE_OPTS": "-Dorg.gradle.daemon=false"
-      }
-    },
     "production": {
       "distribution": "store",
-      "node": "20.18.3",
-      "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease",
-        "env": {
-          "GRADLE_VERSION": "8.2.1"
-        }
-      },
-      "env": {
-        "NODE_ENV": "production",
-        "GRADLE_OPTS": "-Dorg.gradle.daemon=false"
-      }
-    },
-    "production-apk": {
-      "extends": "production",
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
-      }
-    }
-  },
-  "submit": {
-    "production": {
       "android": {
         "track": "production"
       }
