--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -71,7 +71,7 @@
     "@babel/preset-env": "^7.25.0",
     "@babel/runtime": "^7.28.4",
     "@react-native-community/cli": "^20.0.2",
-    "@react-native/gradle-plugin": "0.76.5",
+    "@react-native/gradle-plugin": "^0.81.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
@@ -104,11 +104,7 @@
     "@rollup/rollup-linux-x64-gnu": "npm:rollup",
     "@rollup/rollup-linux-x64-musl": "npm:rollup",
     "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup",
-    "@react-native/gradle-plugin": "0.76.5"
-  },
-  "resolutions": {
-    "@react-native/gradle-plugin": "0.76.5"
+    "@rollup/rollup-darwin-arm64": "npm:rollup"
   },
   "expo": {
     "doctor": {
