--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "@rollup/rollup-linux-x64-gnu": "npm:rollup",
     "@rollup/rollup-linux-x64-musl": "npm:rollup",
     "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup",
-    "@react-native/gradle-plugin": "0.76.5"
+    "@rollup/rollup-darwin-arm64": "npm:rollup"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
