--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -53,7 +53,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.8.0",
@@ -93,7 +93,6 @@
     "eas-cli": "^16.28.0",
     "expo-build-properties": "^1.0.10",
     "metro-cache": "^0.81.5",
-    "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
   },
   "engines": {
