--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mathematico",
   "version": "2.0.0",
-  "main": "index.ts",
   "private": true,
+  "main": "index.ts",
   "scripts": {
     "start": "expo start --dev-client",
     "dev": "expo start --dev-client --clear",
@@ -18,10 +18,7 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "11.4.1",
@@ -30,11 +27,11 @@
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.6.13",
     "axios": "^1.13.2",
-    "expo": "~54.0.0",
+    "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
-    "expo-file-system": "~19.0.17",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
@@ -46,89 +43,48 @@
     "lucide-react-native": "^0.562.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "^0.81.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "~4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0",
+    "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
     "react-refresh": "^0.14.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
-    "@babel/plugin-transform-class-properties": "^7.27.1",
-    "@babel/plugin-transform-private-methods": "^7.27.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
-    "@babel/preset-env": "^7.25.0",
-    "@babel/runtime": "^7.28.4",
-    "@react-native-community/cli": "^20.0.2",
-    "@react-native/gradle-plugin": "^0.81.0",
     "@testing-library/jest-dom": "^6.9.1",
-    "@types/babel__generator": "^7.27.0",
-    "@types/babel__template": "^7.4.4",
-    "@types/babel__traverse": "^7.28.0",
-    "@types/graceful-fs": "^4.1.9",
-    "@types/hammerjs": "^2.0.46",
-    "@types/istanbul-lib-coverage": "^2.0.6",
-    "@types/istanbul-lib-report": "^3.0.3",
-    "@types/istanbul-reports": "^3.0.4",
     "@types/jest": "^29.5.14",
-    "@types/json-schema": "^7.0.15",
-    "@types/lodash": "^4.17.20",
-    "@types/node": "^20.19.27",
-    "@types/react": "~19.1.10",
-    "@types/stack-utils": "^2.0.3",
-    "@types/yargs": "^17.0.33",
-    "babel-jest": "^29.7.0",
-    "babel-preset-expo": "~54.0.0",
+    "@types/react": "~19.1.2",
     "eas-cli": "^16.28.0",
-    "expo-build-properties": "^1.0.10",
-    "metro-cache": "^0.81.5",
+    "expo-build-properties": "~1.0.10",
+    "jest-expo": "~54.0.16",
     "typescript": "~5.9.2"
   },
   "engines": {
-    "node": ">=20.18.0",
-    "npm": ">=8.0.0"
-  },
-  "overrides": {
-    "@rollup/rollup-linux-x64-gnu": "npm:rollup",
-    "@rollup/rollup-linux-x64-musl": "npm:rollup",
-    "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup"
+    "node": ">=20.19.4",
+    "npm": ">=10.0.0"
   },
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
         "enabled": false
       }
-    },
-    "install": {
-      "exclude": [
-        "react",
-        "react-dom",
-        "react-native",
-        "react-native-svg",
-        "expo",
-        "expo-file-system",
-        "react-native-gesture-handler",
-        "react-native-reanimated",
-        "react-native-screens",
-        "react-native-safe-area-context"
-      ]
     }
   },
-  "description": "",
-  "keywords": [],
+  "description": "Mathematico mobile app powered by Expo SDK 54",
+  "keywords": [
+    "mathematico",
+    "expo",
+    "react-native"
+  ],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "license": "MIT"
 }
