--- a/package.json
+++ b/package.json
@@ -1,59 +1,37 @@
 {
   "name": "mathematico-platform",
   "version": "1.0.0",
-  "description": "Mathematico Learning Platform - Unified Monorepo (Backend + Frontend)",
   "private": true,
+  "description": "Mathematico Learning Platform - Backend + Expo mobile app",
   "scripts": {
-    "dev": "npm run dev:backend",
-    "dev:backend": "cd Backend && npm run dev",
-    "dev:mobile": "cd Frontend-app && npx expo start --dev-client",
-    "start:backend": "cd Backend && npm start",
-    "start:mobile": "cd Frontend-app && npx expo start --dev-client",
-    "install:backend": "cd Backend && npm install",
-    "install:mobile": "cd Frontend-app && npm install",
     "install:all": "npm install --workspaces",
-    "clean:all": "cd Backend && rm -rf node_modules package-lock.json && cd ../Frontend-app && rm -rf node_modules package-lock.json .expo",
-    "reset:all": "npm run clean:all && npm run install:all",
-    "build:android": "npm run build:android --workspace=Frontend-app",
-    "build:android-preview": "npm run build:android-preview --workspace=Frontend-app",
-    "build:ios": "npm run build:ios --workspace=Frontend-app",
-    "submit:android": "npm run submit:android --workspace=Frontend-app",
-    "submit:ios": "npm run submit:ios --workspace=Frontend-app",
-    "clean": "rd /s /q node_modules && rd /s /q Backend\\node_modules && rd /s /q Frontend-app\\node_modules && del package-lock.json"
+    "dev": "npm run dev:backend",
+    "dev:backend": "npm run dev --workspace Backend",
+    "dev:mobile": "npm run start --workspace Frontend-app",
+    "start:backend": "npm start --workspace Backend",
+    "start:mobile": "npm run start --workspace Frontend-app",
+    "build:android": "npm run build:android --workspace Frontend-app",
+    "build:android-preview": "npm run build:android-preview --workspace Frontend-app",
+    "build:ios": "npm run build:ios --workspace Frontend-app",
+    "submit:android": "npm run submit:android --workspace Frontend-app",
+    "submit:ios": "npm run submit:ios --workspace Frontend-app",
+    "clean": "rd /s /q node_modules 2>$null; rd /s /q Backend\\node_modules 2>$null; rd /s /q Frontend-app\\node_modules 2>$null; del package-lock.json 2>$null; del Backend\\package-lock.json 2>$null; del Frontend-app\\package-lock.json 2>$null",
+    "reset": "npm run clean && npm install"
   },
   "workspaces": [
     "Backend",
     "Frontend-app"
   ],
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
-  "overrides": {
-    "@rollup/rollup-linux-x64-gnu": "npm:rollup",
-    "@rollup/rollup-linux-x64-musl": "npm:rollup",
-    "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.23.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.22",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "expo-build-properties": "^1.0.10",
-    "typescript": "^5.9.3"
+    "node": ">=20.19.4",
+    "npm": ">=10.0.0"
   },
   "keywords": [
     "mathematico",
-    "education",
+    "expo",
     "react-native",
-    "express",
     "backend",
-    "mobile",
-    "monorepo",
-    "learning"
+    "monorepo"
   ],
   "author": "Mathematico Team",
   "license": "MIT"
